--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,9 +1,9 @@
 <h1>The create post component</h1>
 
-<textarea rows="10" [value]="newPost" #postInput>
+<textarea rows="10" [(ngModel)]="enteredValue">
 </textarea>
 <hr>
-<button (click) = "onAddPost(postInput)" >
+<button (click) = "onAddPost()" >
 	Save Post
 </button>
 
