--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,10 +1,14 @@
 <h1>The create post component</h1>
+<mat-card>
+	<mat-form-field>
+		<textarea matInput rows="10" [(ngModel)]="enteredValue">
+		</textarea>
+	</mat-form-field>
+	<hr>
+	<button mat-raised-button color="primary" (click) = "onAddPost()" >
+		Save Post
+	</button>
+</mat-card>
 
-<textarea rows="10" [(ngModel)]="enteredValue">
-</textarea>
-<hr>
-<button (click) = "onAddPost()" >
-	Save Post
-</button>
 
 <p>{{newPost}}</p>
