--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
 <main>
-  <app-post-create></app-post-create>
-  <app-listposts></app-listposts>
+  <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
+  <app-listposts [posts]="storedPosts"></app-listposts>
 </main>
