--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,6 +1,10 @@
 <mat-card>
 	<mat-form-field>
-		<textarea matInput rows="10" [(ngModel)]="enteredValue">
+		<input matInput type="text" [(ngModel)]="enteredTitle">
+	</mat-form-field>
+	<hr>
+	<mat-form-field>
+		<textarea matInput rows="10" [(ngModel)]="enteredContent">
 		</textarea>
 	</mat-form-field>
 	<hr>
