--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,14 +1,17 @@
 <mat-card>
-	<mat-form-field>
-		<input matInput type="text" [(ngModel)]="enteredTitle">
-	</mat-form-field>
-	<hr>
-	<mat-form-field>
-		<textarea matInput rows="10" [(ngModel)]="enteredContent">
-		</textarea>
-	</mat-form-field>
-	<hr>
-	<button mat-raised-button color="primary" (click) = "onAddPost()" >
-		Save Post
-	</button>
+	<form (submit)= "onAddPost(postForm)" #postForm="ngForm" >
+		<mat-form-field>
+			<input matInput type="text" name="title" ngModel required>
+		</mat-form-field>
+		<hr>
+		<mat-form-field>
+			<textarea matInput rows="10" name="content" ngModel required>
+			</textarea>
+		</mat-form-field>
+		<hr>
+		<button mat-raised-button color="primary" >
+			Save Post
+		</button>
+	</form>
+	
 </mat-card>
